maint script update
